# ai-wem

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
ai_wem/: __init__.py  config.py  engine.py  executor.py  models.py  providers.py  scripts.py
ai_wem/demo/: __main__.py  chat.py  mock_tools.py
