[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-wem"
version = "0.1.0"
description = "Worker/Expert/Master — multi-tier AI chat engine with tool calling"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Pedro Camacho", email = "pedro77339@users.noreply.github.com" },
]
keywords = ["ai", "llm", "chat", "tool-calling", "multi-tier", "worker-expert-master"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/Pedro77339/ai-wem"
Repository = "https://github.com/Pedro77339/ai-wem"
Issues = "https://github.com/Pedro77339/ai-wem/issues"

[tool.hatch.build.targets.wheel]
packages = ["ai_wem"]
